--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppsoluteChaos">
+        
+        <!-- Launch in Full Space mode by default -->
+        <property
+           android:name="android.window.PROPERTY_XR_ACTIVITY_START_MODE"
+           android:value="XR_ACTIVITY_START_MODE_FULL_SPACE_MANAGED" />
+        
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|screenLayout|smallestScreenSize|density|uiMode"
